--- a/package.json
+++ b/package.json
@@ -4,14 +4,6 @@
   "version": "0.0.1",
   "description": "This package is used to easily integrate the Facebook login button into VueJS.",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "scripts": {
-    "dev": "vue serve src/Login.vue",
-    "build": "bili --name index --plugin vue --vue.css false"
-  },
-  "files": [
-    "dist/*"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/superrandres/vue-simple-fb-button-login.git"
@@ -32,11 +24,32 @@
     "url": "https://github.com/superrandres/vue-simple-fb-button-login/issues"
   },
   "homepage": "https://github.com/superrandres/vue-simple-fb-button-login#readme",
+  "main": "dist/simplefbbuttonlogin.umd.js",
+  "module": "dist/simplefbbuttonlogin.esm.js",
+  "unpkg": "dist/simplefbbuttonlogin.min.js",
+  "browser": {
+    "./sfc": "src/SimpleFBButtonLogin.vue"
+  },
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
+  "scripts": {
+    "build": "npm run build:unpkg & npm run build:es & npm run build:umd",
+    "build:umd": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format umd --file dist/simplefbbuttonlogin.umd.js",
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es --file dist/simplefbbuttonlogin.esm.js",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife --file dist/simplefbbuttonlogin.min.js"
+  },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-beta.10",
-    "bili": "^4.10.0",
-    "rollup-plugin-vue": "^6.0.0-alpha.10",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "cross-env": "^5.2.0",
+    "minimist": "^1.2.0",
+    "rollup": "^1.14.4",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-uglify-es": "0.0.1",
+    "rollup-plugin-vue": "^4.7.2",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
   }
 }
